fixed small wrapping issue with 'More'

--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -338,10 +338,10 @@ header {
     display: none;
 }
 
-/*not sure if working*/
-/*.main-rows > td:nth-child(11) {
+/*makes the 'More(symbol)' stick together in Misc Table*/
+.main-rows > td:nth-child(11) {
     white-space:nowrap;
-}*/
+}
 
     /*affects the description td records*/
     .description {
